testcases/compiler2015/Phase2/CompileError/lvalue0-5100379071-puyouer.c
/**
 string literal is not a lvalue
 */

int main() {
    int t;
    "a" = t;
}
